--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,22 +2,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac546b62-f98e-4bf9-c672-f0c40cc9df24"
+        "outputId": "fcd7cb18-3845-4edd-f331-cf5fdd93ec50"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-184996571.py:77: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  _syn_idx = pd.date_range(\"2000-01-01\", periods=24 * 10, freq=\"H\")  # 10 days hourly\n"
+            "/tmp/ipython-input-1113667548.py:12: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  train = train.set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
       ],
@@ -26,93 +26,32 @@
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from statsmodels.tsa.api import ExponentialSmoothing\n",
+        "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
+        "# load train，test data\n",
+        "train = pd.read_csv(\"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\")\n",
+        "test = pd.read_csv(\"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\")\n",
         "\n",
-        "# ---------- helpers (used by the functional API) ----------\n",
-        "def _prep_train_series(train_df: pd.DataFrame) -> pd.Series:\n",
-        "    \"\"\"Return an hourly-frequency Series of trips indexed by Timestamp.\"\"\"\n",
-        "    df = train_df.copy()\n",
-        "    df[\"Timestamp\"] = pd.to_datetime(df[\"Timestamp\"])\n",
-        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\")\n",
-        "    y = pd.to_numeric(df[\"trips\"], errors=\"coerce\").asfreq(\"H\")\n",
-        "    if y.isna().any():\n",
-        "        y = y.interpolate(limit_direction=\"both\")\n",
-        "    return y\n",
+        "train[\"Timestamp\"] = pd.to_datetime(train[\"Timestamp\"])\n",
+        "train = train.set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\").interpolate(limit_direction=\"both\")\n",
         "\n",
+        "# build and fit model\n",
+        "model = ExponentialSmoothing(\n",
+        "    y_train,\n",
+        "    trend=\"add\",\n",
+        "    seasonal=\"add\",\n",
+        "    seasonal_periods=24,\n",
+        "    initialization_method=\"estimated\"\n",
+        ")\n",
         "\n",
-        "def _prep_test_index(test_df: pd.DataFrame) -> pd.DatetimeIndex:\n",
-        "    idx = pd.to_datetime(test_df[\"Timestamp\"])\n",
-        "    try:\n",
-        "        return pd.DatetimeIndex(idx).asfreq(\"H\")\n",
-        "    except Exception:\n",
-        "        return pd.DatetimeIndex(idx)\n",
+        "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
+        "# forecasts\n",
+        "h = len(test)\n",
+        "forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "def _build_es(y_series: pd.Series, seasonal_periods: int = 24):\n",
-        "    \"\"\"Unfitted Holt-Winters model: additive trend + additive seasonality.\"\"\"\n",
-        "    # Keep signature compatible with older statsmodels\n",
-        "    try:\n",
-        "        m = ExponentialSmoothing(\n",
-        "            y_series,\n",
-        "            trend=\"add\",\n",
-        "            seasonal=\"add\",\n",
-        "            seasonal_periods=seasonal_periods,\n",
-        "            initialization_method=\"estimated\",\n",
-        "        )\n",
-        "    except TypeError:\n",
-        "        m = ExponentialSmoothing(\n",
-        "            y_series,\n",
-        "            trend=\"add\",\n",
-        "            seasonal=\"add\",\n",
-        "            seasonal_periods=seasonal_periods,\n",
-        "        )\n",
-        "    return m\n",
-        "\n",
-        "\n",
-        "# ---------- functional API (used for accuracy scoring) ----------\n",
-        "def model1(train_df: pd.DataFrame):\n",
-        "    \"\"\"\n",
-        "    Fit Holt-Winters on train_df (24-hour seasonality) and return the fitted model.\n",
-        "    train_df must contain columns ['Timestamp','trips'].\n",
-        "    \"\"\"\n",
-        "    y = _prep_train_series(train_df)\n",
-        "    m = _build_es(y, seasonal_periods=24)\n",
-        "    try:\n",
-        "        fit = m.fit(optimized=True, use_brute=True)\n",
-        "    except TypeError:\n",
-        "        fit = m.fit(optimized=True)\n",
-        "    return fit\n",
-        "\n",
-        "\n",
-        "def predict(fitted_model, test_df: pd.DataFrame) -> pd.Series:\n",
-        "    \"\"\"\n",
-        "    Forecast len(test_df) steps ahead and return a Series named 'pred'\n",
-        "    indexed by test timestamps.\n",
-        "    \"\"\"\n",
-        "    h = len(test_df)\n",
-        "    fc = fitted_model.forecast(steps=h)\n",
-        "    idx = _prep_test_index(test_df)\n",
-        "    return pd.Series(np.asarray(fc).ravel(), index=idx, name=\"pred\")\n",
-        "\n",
-        "\n",
-        "# ---------- variable API (type/shape checks at import time) ----------\n",
-        "# Build a tiny synthetic hourly series so that import never fails.\n",
-        "_syn_idx = pd.date_range(\"2000-01-01\", periods=24 * 10, freq=\"H\")  # 10 days hourly\n",
-        "_syn_y = pd.Series(np.linspace(100.0, 200.0, len(_syn_idx)), index=_syn_idx)\n",
-        "\n",
-        "# Unfitted algorithm object (what some tests call 'model'):\n",
-        "model = _build_es(_syn_y, seasonal_periods=24)\n",
-        "\n",
-        "# Fitted model object (what some tests call 'modelFit'):\n",
-        "try:\n",
-        "    modelFit = model.fit(optimized=True, use_brute=True)\n",
-        "except TypeError:\n",
-        "    modelFit = model.fit(optimized=True)\n",
-        "\n",
-        "# 1-D numeric array of length 744 (what some tests call 'pred'):\n",
-        "# Use float dtype (per instructor note that int can't handle missing values).\n",
-        "pred = np.zeros(744, dtype=float)\n"
+        "pred = np.asarray(forecast).ravel()\n"
       ]
     }
   ],
