--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,22 +2,31 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fcd7cb18-3845-4edd-f331-cf5fdd93ec50"
+        "outputId": "b413c1fe-2834-4420-894a-27d71a5e5b1f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-1113667548.py:12: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  train = train.set_index(\"Timestamp\").asfreq(\"H\")\n"
+            "/tmp/ipython-input-234823271.py:23: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  .asfreq(\"H\")\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "len(pred) = 744\n",
+            "dtype(pred[0]) = <class 'numpy.float64'>\n",
+            "NaNs in pred: 0\n"
           ]
         }
       ],
@@ -28,15 +37,30 @@
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# load train，test data\n",
-        "train = pd.read_csv(\"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\")\n",
-        "test = pd.read_csv(\"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\")\n",
+        "# load data\n",
+        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "train[\"Timestamp\"] = pd.to_datetime(train[\"Timestamp\"])\n",
-        "train = train.set_index(\"Timestamp\").asfreq(\"H\")\n",
-        "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\").interpolate(limit_direction=\"both\")\n",
+        "train_df = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
+        "test_df  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "# build and fit model\n",
+        "\n",
+        "train_df.columns = train_df.columns.str.strip()\n",
+        "test_df.columns  = test_df.columns.str.strip()\n",
+        "\n",
+        "# train\n",
+        "train_df = (\n",
+        "    train_df\n",
+        "    .sort_values(\"Timestamp\")\n",
+        "    .set_index(\"Timestamp\")\n",
+        "    .asfreq(\"H\")\n",
+        ")\n",
+        "\n",
+        "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\").interpolate(limit_direction=\"both\")\n",
+        "\n",
+        "y_train = y_train.ffill().bfill()\n",
+        "\n",
+        "#build and fit\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
@@ -44,14 +68,19 @@
         "    seasonal_periods=24,\n",
         "    initialization_method=\"estimated\"\n",
         ")\n",
-        "\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# forecasts\n",
-        "h = len(test)\n",
+        "#  pred\n",
+        "h = len(test_df)\n",
         "forecast = modelFit.forecast(steps=h)\n",
+        "pred = np.asarray(forecast).ravel()\n",
         "\n",
-        "pred = np.asarray(forecast).ravel()\n"
+        "# print\n",
+        "print(\"len(pred) =\", len(pred))\n",
+        "print(\"dtype(pred[0]) =\", type(pred[0]))\n",
+        "print(\"NaNs in pred:\", np.isnan(pred).sum())\n",
+        "\n",
+        "\n"
       ]
     }
   ],
