--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,55 +2,69 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d077d89a-644f-46ff-f8f3-22d3ce30247e"
+        "outputId": "4071f31b-6945-4fd4-e161-44c6e8501e8b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3476913728.py:13: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  train = train.set_index(\"Timestamp\").asfreq(\"H\").sort_index()\n"
+            "/tmp/ipython-input-228930099.py:17: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "import numpy as np\n",
+        "# assignment1.py  —— paste this whole file\n",
+        "\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# 1. Load train/test\n",
-        "train = pd.read_csv(\"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\")\n",
-        "test  = pd.read_csv(\"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\")\n",
+        "# ---- 1) load train / test data from raw URLs (works in Colab AND GitHub Actions) ----\n",
+        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "# 2. 时间戳处理\n",
-        "train[\"Timestamp\"] = pd.to_datetime(train[\"Timestamp\"])\n",
-        "train = train.set_index(\"Timestamp\").asfreq(\"H\").sort_index()\n",
-        "y_train = train[\"trips\"].interpolate(limit_direction=\"both\")\n",
+        "train_df = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
+        "test_df  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "# 3. 建模 (Holt-Winters)\n",
+        "# sort + set hourly freq so statsmodels knows the frequency\n",
+        "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "\n",
+        "# numeric target with simple gap fill\n",
+        "y_train = (\n",
+        "    pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
+        "    .astype(float)\n",
+        "    .interpolate(limit_direction=\"both\")\n",
+        ")\n",
+        "\n",
+        "# ---- 2) build the model object (do NOT call .fit() here) ----\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,   # 一天24小时\n",
-        "    initialization_method=\"estimated\"\n",
+        "    seasonal_periods=24,\n",
+        "    initialization_method=\"estimated\",\n",
         ")\n",
+        "\n",
+        "# ---- 3) fit the model ----\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# 4. 预测\n",
-        "h = len(test)\n",
-        "forecast = modelFit.forecast(steps=h)\n",
-        "pred = np.asarray(forecast).ravel()\n"
+        "# ---- 4) forecast exactly len(test) steps and expose as 1-D Python floats ----\n",
+        "h = len(test_df)\n",
+        "_fc = modelFit.forecast(steps=h)\n",
+        "\n",
+        "# IMPORTANT: make it a plain Python-list of floats, not numpy.float64\n",
+        "pred = list(map(float, np.asarray(_fc).ravel()))\n"
       ]
     }
   ],
